[package]
name = "iter-python"
version = "0.9.1"
authors = ["Daniel Henry-Mantilla (daniel.henry.mantilla@gmail.com)", ]
edition = "2018"

documentation = "https://docs.rs/iter-python/"
homepage = "https://github.com/danielhenrymantilla/iter-python-rs"
repository = "https://github.com/danielhenrymantilla/iter-python-rs"

description = "Python generator expressions and 'list' comprehensions"
keywords = ["python", "iterator", "macro", "generator", "comprehension"]
categories = ["rust-patterns", ]
readme = "README.md"
license = "MIT"

[dev-dependencies]
itertools = "0.8.0"

[features]
default = []

nightly = []

[package.metadata.docs.rs]
features = ["nightly", ]
