[package]
name = "iter-python"
version = "0.9.2"
authors = ["Daniel Henry-Mantilla (daniel.henry.mantilla@gmail.com)", ]
edition = "2018"

documentation = "https://docs.rs/iter-python/"
homepage = "https://github.com/danielhenrymantilla/iter-python-rs"
repository = "https://github.com/danielhenrymantilla/iter-python-rs"

description = "Python generator expressions and 'list' comprehensions"
keywords = ["python", "iterator", "human", "generator", "comprehension"]
categories = ["rust-patterns", ]
readme = "README.md"
license = "MIT"

[dependencies]
candy = "0.1.3"
join-lazy-fmt = "0.9.2"

[features]
default = []

nightly = []

[package.metadata.docs.rs]
features = ["nightly", ]
