[package]
name = "iter-python"
version = "0.10.1"
authors = ["Daniel Henry-Mantilla (daniel.henry.mantilla@gmail.com)", ]
edition = "2018"

documentation = "https://docs.rs/iter-python/"
homepage = "https://github.com/danielhenrymantilla/iter-python-rs"
repository = "https://github.com/danielhenrymantilla/iter-python-rs"

description = "Python generator expressions and 'list' comprehensions"
keywords = ["python", "iterator", "list", "generator", "comprehension"]
categories = ["rust-patterns", ]
readme = "README.md"
license = "MIT"

[dependencies]
join-lazy-fmt = "0.9.2"

[features]
default = ["std"]
std = []

better-docs = []

[package.metadata.docs.rs]
features = ["better-docs", ]
